--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
-		"@testing-library/user-event": "^7.1.2",
 		"@types/jest": "^24.0.0",
 		"@types/uuid": "^3.4.6",
 		"proxy-chain": "^0.3.3",
+		"tilted_aio_shared": "../tilted_aio_shared",
 		"typescript": "~3.7.2",
 		"uuid": "^3.4.0"
 	},
@@ -14,23 +14,15 @@
 		"build": "tsc",
 		"watch": "tsc -w",
 		"lint": "tslint -c tslint.json -p tsconfig.json",
-		"start": "npm run build && electron ./dist/electron.js",
+		"start": "yarn build && electron ./dist/electron.js",
 		"createbrowser": "electron public/createBrowser.js"
 	},
 	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
+		"production": [ ">0.2%", "not dead", "not op_mini all" ],
+		"development": [ "last 1 chrome version", "last 1 firefox version", "last 1 safari version" ]
 	},
 	"devDependencies": {
-		"@types/node": "^12.12.47",
+		"@types/node": "^12",
 		"concurrently": "^5.0.2",
 		"electron": "^7.1.7",
 		"electron-builder": "^21.2.0",
